:wrench: [Editorial] fix 118 arrow alignment

--- a/src/styles/campaign-editorial.scss
+++ b/src/styles/campaign-editorial.scss
@@ -88,6 +88,10 @@
             margin-right: 10px;
         }
 
+        .btn__icon {
+            display: flex;
+        }
+
         .btn__read-more {
             display: flex;
             flex-direction: row-reverse;
