--- a/src/styles/hardware.scss
+++ b/src/styles/hardware.scss
@@ -139,10 +139,7 @@
                      border: none;
                     // border-radius: 48px;
                     padding: 12px 28px;
-
-                    &:hover {
-                        cursor: pointer;
-                    }
+                    cursor: pointer;
 
                     .btn__label  {
                         color: white;
